feature: 채팅 기능 개선(실시간 접속자)